--- a/assinatura.html
+++ b/assinatura.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 <html>
 <head>
     <meta charset="UTF-8">
